--- a/Nextcloud Passwords/Nextcloud Passwords/Login/Base.lproj/Login.storyboard
+++ b/Nextcloud Passwords/Nextcloud Passwords/Login/Base.lproj/Login.storyboard
@@ -59,7 +59,7 @@
                                             <accessibilityTraits key="traits" keyboardKey="YES"/>
                                         </accessibility>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" textContentType="password"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                     </textField>
                                 </subviews>
                             </stackView>
