--- a/Nextcloud Passwords/Nextcloud Passwords/Main screen/Base.lproj/Main.storyboard
+++ b/Nextcloud Passwords/Nextcloud Passwords/Main screen/Base.lproj/Main.storyboard
@@ -22,9 +22,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j2k-2I-PqF">
-                                <rect key="frame" x="164" y="172" width="84" height="66"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j2k-2I-PqF">
+                                <rect key="frame" x="40" y="597" width="295" height="30"/>
                                 <state key="normal" title="Login"/>
                                 <connections>
                                     <action selector="LoginButton:" destination="TnZ-9h-UGU" eventType="touchUpInside" id="DvN-ZO-Uhr"/>
@@ -32,6 +31,11 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.2635597885" green="0.5673190951" blue="0.83532512189999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="j2k-2I-PqF" firstAttribute="leading" secondItem="lcz-XD-ure" secondAttribute="leading" constant="40" id="HxG-gO-wVf"/>
+                            <constraint firstItem="lcz-XD-ure" firstAttribute="bottom" secondItem="j2k-2I-PqF" secondAttribute="bottom" constant="40" id="bMT-L7-ybr"/>
+                            <constraint firstItem="lcz-XD-ure" firstAttribute="trailing" secondItem="j2k-2I-PqF" secondAttribute="trailing" constant="40" id="ygh-Xy-D4N"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="lcz-XD-ure"/>
                     </view>
                     <navigationItem key="navigationItem" id="ZgY-vx-aOb"/>
@@ -62,7 +66,66 @@
                     <view key="view" contentMode="scaleToFill" id="Uif-gq-Wmm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="hAa-WO-q0s" userLabel="VertikalLogin Stack View with Login Button">
+                                <rect key="frame" x="70" y="252.5" width="235" height="162"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ZOP-tl-jFX" userLabel="VertikalLogin Stack View">
+                                        <rect key="frame" x="0.0" y="0.0" width="235" height="122"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="j2e-zK-4wI" userLabel="loginURL Stack View">
+                                                <rect key="frame" x="0.0" y="0.0" width="235" height="34"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginURL" translatesAutoresizingMaskIntoConstraints="NO" id="kbC-i3-TTZ">
+                                                        <rect key="frame" x="0.0" y="0.0" width="25" height="34"/>
+                                                    </imageView>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="https://cloud.example.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DDJ-BD-MrR">
+                                                        <rect key="frame" x="35" y="0.0" width="200" height="34"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                </subviews>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="0am-xb-pYP" userLabel="loginUser Stack View">
+                                                <rect key="frame" x="0.0" y="44" width="235" height="34"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginUser" translatesAutoresizingMaskIntoConstraints="NO" id="SHJ-dM-n2t">
+                                                        <rect key="frame" x="0.0" y="0.0" width="25" height="34"/>
+                                                    </imageView>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s9H-2W-EeW">
+                                                        <rect key="frame" x="35" y="0.0" width="200" height="34"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                </subviews>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="d00-IP-1Ko" userLabel="loginPassword Stack View">
+                                                <rect key="frame" x="0.0" y="88" width="235" height="34"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginPassword" translatesAutoresizingMaskIntoConstraints="NO" id="ZCc-cZ-w3d">
+                                                        <rect key="frame" x="0.0" y="0.0" width="25" height="34"/>
+                                                    </imageView>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gAZ-Wp-xTB">
+                                                        <rect key="frame" x="35" y="0.0" width="200" height="34"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                                    </textField>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="amm-J1-KHQ">
+                                        <rect key="frame" x="0.0" y="132" width="235" height="30"/>
+                                        <state key="normal" title="Login"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="hAa-WO-q0s" firstAttribute="centerY" secondItem="Uif-gq-Wmm" secondAttribute="centerY" id="Fxa-Wz-IsN"/>
+                            <constraint firstItem="hAa-WO-q0s" firstAttribute="centerX" secondItem="Uif-gq-Wmm" secondAttribute="centerX" id="V8E-kG-oDe"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="mUq-4d-cL2"/>
                     </view>
                 </viewController>
@@ -89,4 +152,9 @@
         </scene>
     </scenes>
     <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+    <resources>
+        <image name="loginPassword" width="25" height="25"/>
+        <image name="loginURL" width="25" height="25"/>
+        <image name="loginUser" width="25" height="25"/>
+    </resources>
 </document>
