--- a/Nextcloud Passwords/Nextcloud Passwords/Main screen/Base.lproj/Main.storyboard
+++ b/Nextcloud Passwords/Nextcloud Passwords/Main screen/Base.lproj/Main.storyboard
@@ -82,7 +82,7 @@
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="https://cloud.example.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DDJ-BD-MrR">
                                                         <rect key="frame" x="35" y="0.0" width="200" height="34"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="URL" returnKeyType="continue" textContentType="url"/>
                                                     </textField>
                                                 </subviews>
                                             </stackView>
@@ -95,7 +95,7 @@
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s9H-2W-EeW">
                                                         <rect key="frame" x="35" y="0.0" width="200" height="34"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" returnKeyType="continue" textContentType="username"/>
                                                     </textField>
                                                 </subviews>
                                             </stackView>
@@ -108,7 +108,7 @@
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gAZ-Wp-xTB">
                                                         <rect key="frame" x="35" y="0.0" width="200" height="34"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                                        <textInputTraits key="textInputTraits" returnKeyType="continue" secureTextEntry="YES" textContentType="password"/>
                                                     </textField>
                                                 </subviews>
                                             </stackView>
